# C_Serial_Communication

./: .gitignore  README.md  serialopen.c
Basic code/: a.out  basicSerialCommunication.c
Basic serial code/: basicSerialCommunication.c
BasicCode/: header.h  main.c
withQueue/: CMakeCache.txt  CMakeLists.txt  Makefile  Queue.c  Queue.h  a.out  app.out  cmake_install.cmake  heaer.h  main.c  withQueue  withQueue.out
withSocket/: CMakeLists.txt  Queue.h  Serial.c  Serial.h  SimpleClient.c  SimpleClient.h  SimpleServer.c  SimpleServer.h  SocketClient.c  SocketClient.h  TestServer.out  header.h  main.c  withSocket.out
