
#-----------------------------------------------------------------------------
# PROGRAMMER   : cucudas0127
# REVISION     : 2020.11.03
# DESCRIPTS    : Simple Serial Communication with Queue Function.
# Environment Setting
# OS : ubuntu 18.04
#-----------------------------------------------------------------------------

# if you want using make command
# you have to install make
# sudo apt-get install make 



ADD_EXECUTABLE( app.out main.c Queue.c )